[package]
name = "goa"
version = "0.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
chrono = "0.4"
clokwerk = "0.3.5"
git2 = "0.13"
predicates = "2.1"
structopt = "0.3"
url = "2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
run_script = { version = "0.9" }
